Unit2.Cprogramming/lesson 3.C Basics[Assignment]/My Solution of HW1/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
09:26:51 **** Rebuild of configuration Debug for project C_Basics ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -ansi -std=c89 -o C_Basics.exe main.o 
Info: Nothing to build for C_Basics
09:27:09 **** Incremental Build of configuration Debug for project C_Basics ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:90:16: error: invalid initializer
  char *str[] = "Hello world";
                ^~~~~~~~~~~~~
..\main.c:91:9: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
  str[0] = 'h';
         ^
..\main.c:90:8: warning: variable 'str' set but not used [-Wunused-but-set-variable]
  char *str[] = "Hello world";
        ^~~
09:27:17 **** Incremental Build of configuration Debug for project C_Basics ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:90:7: warning: variable 'str' set but not used [-Wunused-but-set-variable]
  char str[] = "Hello world";
       ^~~
gcc -ansi -std=c89 -o C_Basics.exe main.o 
09:27:40 **** Incremental Build of configuration Debug for project C_Basics ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -ansi -std=c89 -o C_Basics.exe main.o 
09:28:14 **** Incremental Build of configuration Debug for project C_Basics ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -ansi -std=c89 -o C_Basics.exe main.o 
09:28:46 **** Incremental Build of configuration Debug for project C_Basics ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -ansi -std=c89 -o C_Basics.exe main.o 
09:28:56 **** Incremental Build of configuration Debug for project C_Basics ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -ansi -std=c89 -o C_Basics.exe main.o 
09:29:03 **** Incremental Build of configuration Debug for project C_Basics ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -ansi -std=c89 -o C_Basics.exe main.o 
12:58:49 **** Incremental Build of configuration Debug for project C_Basics ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -ansi -std=c89 -o C_Basics.exe main.o 
13:01:29 **** Incremental Build of configuration Debug for project C_Basics ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -ansi -std=c89 -o C_Basics.exe main.o 
19:19:44 **** Incremental Build of configuration Debug for project C_Basics ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -ansi -std=c89 -o C_Basics.exe main.o 
